# python-project-50

./: .Makefile.swp  .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: action.yml  file.yml  main.yml
gendiff/: __init__.py  generate_diff.py  parsing_cli_data.py  parsing_data.py
gendiff/modules/: diff.py  generate_diff.py  json.py  parsing_cli_data.py  parsing_data.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1.json  result_json.txt
