[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["roza-ts <ayara2015@mail.ru>"]
readme = "README.md"
packages = [
       { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

